syntax = "proto3";

package onight.zjfae.afront.gens;
option java_outer_classname="HighNetWorthUpload";
//Generated By BrewRobot:Wed Oct 11 09:48:59 CST 2017

message PBIFE_bankcardmanage_highNetWorthUpload{
	///ife/userinfomanage//highNetWorthUpload.html


}

message Ret_PBIFE_bankcardmanage_highNetWorthUpload{
	///ife/userinfomanage//highNetWorthUpload.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_bankcardmanage_highNetWorthUpload data=3;


}

message REQ_PBIFE_bankcardmanage_highNetWorthUpload{
	///ife/userinfomanage//highNetWorthUpload.html

	 message NameAndPath{
  	   string fileNamesp = 1;	 //,参数键,String,不校验,是,
	   string filePath = 2;	 //,参数名/值,String,不校验,是,
	   string model = 3; //,模型排序,与核心一一对应，不校验，是
   }
	string fileName1 = 1; //,身份证正面附件名称	 String	200	否,

	string filePath1 = 2; //,身份证正面附件路径	String	2000	否,

	string fileName2 = 3; //,身份证背面附件名称	 String	200	否,

	string filePath2 = 4; //,身份证背面附件路径	 String	2000	否,

	string fileName3 = 5; //,手持身份证附件名称	  String 200	否,

	string filePath3 = 6; //,手持身份证附件路径	 String	2000	否

	string fileName4 = 7; //,解绑申请书附件名称	String	200	否,

	string filePath4 = 8; //,解绑申请书附件路径	String	2000 是,

	string fileName5 = 9; //,银行卡流水单附件名称	String	200	是

	string filePath5 = 10; //,银行卡流水单附件路径	String	2000 是,

	string fileName6 = 11; //,资产证明名称	String	200	是

	string filePath6 = 12; //,资产证明附件路径	String	2000 是,

	string fileName7 = 13; //,资产证明名称	String	200	是

	string filePath7 = 14; //,资产证明附件路径	String	2000 是,

	string fileName8 = 15; //,资产证明附件名称	String	200	是

	string filePath8 = 16; //,资产证明附件路径	String	2000 是,

	string fileName9 = 17; //,资产证明附件名称	String	200	是

	string filePath9 = 18; //,资产证明附件路径	String	2000 是,

	string fileName10 = 19; //,关系证明附件名称	String	200	是

	string filePath10 = 20; //,关系证明附件路径	String	2000 是,

	string businessType = 21; //,业务类型 String	不校验	否 highNetWorth,
	
	string applyChannel = 22; //,申请终端 String 
	
    string materialsType1 = 24 ;//资产证明材料名1,String

    string materialsType2 = 25;//资产证明材料名2,String

    string materialsType3 = 26;//资产证明材料名3,String

    string materialsType4 = 27;//资产证明材料名4,String

    string materialsType5 = 28;//资产证明材料名5,String

    string materialsType6 = 29 ;//资产证明材料名6,String
    
    string materialsType7 = 30 ;//资产证明材料名7,String
	
	repeated NameAndPath nameAndPathList = 23;

}